# rt4svpp

./: LICENSE.md  Makefile  README.md  body.cpp  body.h  installReqs.py  lst  main.cpp  mdrt4sv  resources.qrc  rt4sv++  tmp  ui_class.pro  ui_class.pro.user.5d4e3d9  ui_class.pro.user.a63c661  window.h
.qtc_clangd/.cache/clangd/index/: AsciiTable.h.1187983A5420FE7E.idx  BinTable.h.651F72914FB2B91A.idx  CCfits.A1AB38B7270637F9.idx  CCfits.h.27198859F93E8AE0.idx  Column.h.17BAA81DD82A4D18.idx  ColumnData.h.33903DCFD7EE67FD.idx  ColumnT.h.A462097CA0FD38F7.idx  ColumnVectorData.h.3EEDA7116B4AB682.idx  ExtHDU.h.B1209A842E499CD5.idx  ExtHDUT.h.DEFE204B3F2CDABC.idx  FITS.h.D4617DECDEAFC57A.idx  FITSUtil.h.4A3BA14638D797CF.idx  FITSUtilT.h.FA094020344381D2.idx  FitsError.h.B50E7F51085AE76A.idx  GroupTable.h.339FF26A1518FDEE.idx  HDU.h.2ED4301FA02DC0D3.idx  HDUCreator.h.E3042F9C5EA46CE6.idx  Image.h.1BA712D9795C3C3A.idx  ImageExt.h.4D455BF5F3793C21.idx  KeyData.h.685B74F6DC4632BF.idx  Keyword.h.7011005DE7623286.idx  KeywordCreator.h.5508855C1F955F51.idx  KeywordT.h.6D49168B18BA2B39.idx  NewKeyword.h.AB27310A5C862F41.idx  PHDU.h.41A33B66EFE5B458.idx  PHDUT.h.D23C8206BC23C3C1.idx  PrimaryHDU.h.A8000E908DEB014E.idx  QCache.8F1BB5BE97A56C81.idx  QEvent.B8BA0E62CD4E5409.idx  (+464 more)
CCfits-2.6/: AsciiTable.cxx  AsciiTable.lo  BinTable.cxx  BinTable.lo  CCfits.pc  CCfits.pc.in  CHANGES  CMakeLists.txt  Column.cxx  Column.lo  ColumnCreator.lo  ColumnData.lo  ColumnVectorData.lo  Doxyfile  ExtHDU.cxx  ExtHDU.lo  FITS.cxx  FITS.lo  FITSUtil.lo  FitsError.cxx  FitsError.lo  GroupTable.cxx  GroupTable.lo  HDU.cxx  HDU.lo  HDUCreator.cxx  HDUCreator.lo  KeyData.cxx  KeyData.lo  Keyword.cxx  Keyword.lo  KeywordCreator.cxx  KeywordCreator.lo  Makefile  Makefile.am  Makefile.in  PHDU.cxx  PHDU.lo  README.INSTALL  Table.cxx  (+11 more)
CCfits-2.6/.deps/: AsciiTable.Plo  BinTable.Plo  Column.Plo  ColumnCreator.Plo  ColumnData.Plo  ColumnVectorData.Plo  ExtHDU.Plo  FITS.Plo  FITSUtil.Plo  FitsError.Plo  GroupTable.Plo  HDU.Plo  HDUCreator.Plo  KeyData.Plo  Keyword.Plo  KeywordCreator.Plo  PHDU.Plo  Table.Plo  cookbook.Po
CCfits-2.6/.libs/: cookbook  libCCfits.lai
CCfits-2.6/config/m4/: ac_check_package.m4  ac_compile_warnings.m4  pfk_cxx_lib_path.m4
CCfits-2.6/html/: AsciiTable_8h_source.html  BinTable_8h_source.html  CCfits_8h_source.html  ColumnCreator_8h_source.html  ColumnData_8h_source.html  ColumnT_8h_source.html  ColumnVectorData_8h_source.html  Column_8h_source.html  ExtHDUT_8h_source.html  ExtHDU_8h_source.html  FITSUtilT_8h_source.html  FITSUtil_8h_source.html  FITS_8h_source.html  FitsError_8h_source.html  GroupTable_8h_source.html  HDUCreator_8h_source.html  HDU_8h_source.html  ImageExt_8h_source.html  Image_8h_source.html  KeyData_8h_source.html  KeywordCreator_8h_source.html  KeywordT_8h_source.html  Keyword_8h_source.html  MSconfig_8h_source.html  NewKeyword_8h_source.html  PHDUT_8h_source.html  PHDU_8h_source.html  PrimaryHDU_8h_source.html  Table_8h_source.html  annotated.html  ascii.html  binary.html  classCCfits_1_1AsciiTable-members.html  classCCfits_1_1AsciiTable.html  classCCfits_1_1BinTable-members.html  classCCfits_1_1BinTable.html  classCCfits_1_1Column-members.html  classCCfits_1_1Column.html  classCCfits_1_1Column_1_1InsufficientElements-members.html  classCCfits_1_1Column_1_1InsufficientElements.html  (+151 more)
CCfits-2.6/vs.net/: Makefile  Makefile.am  Makefile.in
UI/: calsection.cpp  calsection.h  contentviewer.cpp  contentviewer.h  custom_message_box.cpp  custom_message_box.h  custom_ui_elements.h  custom_widget.cpp  custom_widget.h  export_dynamic_spectrum_widget.cpp  export_dynamic_spectrum_widget.h  heat_map_widget.cpp  heat_map_widget.h  integrate_widget.cpp  integrate_widget.h  just_new_menu.cpp  just_new_menu.h  rms_sec_widget.cpp  rms_sec_widget.h  rms_selector.cpp  rms_selector.h  single_spec_widget.cpp  single_spec_widget.h  varcoefscalcwidget.cpp  varcoefscalcwidget.h  vbox_main.cpp  vbox_main.h
cfitsio-4.0.0/: Makefile  cfitsio.pc  config.status  libcfitsio.so.9
data/: averovertime.cpp  averovervelocity.cpp  calibration.cpp  exportvaroiusdata.cpp  extractlcs.cpp  integrate.cpp  rotation.cpp  savespectrumtoascii.cpp  spectral_container.cpp  spectral_container.h  spectralindex.cpp  wd.cpp
images/: Edytujesz RT4SV++ (sekcja) – AstroWiki 2.html
images/Edytujesz RT4SV++ (sekcja) – AstroWiki 2_files/: load(1).php  load.php
sample_data/: cepa_55006716_AVR.fits  cepa_55008703_AVR.fits  cepa_55009473_AVR.fits  cepa_55012617_AVR.fits  cepa_55015728_AVR.fits  cepa_55016527_AVR.fits  cepa_55017423_AVR.fits  cepa_55023336_AVR.fits  cepa_55026383_AVR.fits  cepa_55028398_AVR.fits  cepa_55033333_AVR.fits  cepa_55036349_AVR.fits  cepa_55041339_AVR.fits  cepa_55042549_AVR.fits  cepa_55043300_AVR.fits  cepa_55047220_AVR.fits  cepa_55054643_AVR.fits  cepa_55057318_AVR.fits  cepa_55062201_AVR.fits  cepa_55064566_AVR.fits  cepa_55069505_AVR.fits  cepa_55072449_AVR.fits  cepa_55078224_AVR.fits  cepa_55079272_AVR.fits  cepa_55080535_AVR.fits  cepa_55082509_AVR.fits  cepa_55084197_AVR.fits  cepa_55086530_AVR.fits  cepa_55091237_AVR.fits  cepa_55099368_AVR.fits  cepa_55105437_AVR.fits  cepa_55114357_AVR.fits  cepa_55132033_AVR.fits  cepa_55147305_AVR.fits  cepa_55153029_AVR.fits  cepa_55160098_AVR.fits  cepa_55164198_AVR.fits  cepa_55166994_AVR.fits  cepa_55169145_AVR.fits  cepa_55178939_AVR.fits  (+953 more)
