# 
# * Copyright (C)  2003  The Board of Trustees of  
# * The Leland Stanford Junior University.  All Rights Reserved.
#
# $Id$
#
# Author: Paul_Kunz@slac.stanford.edu
#

# The following is set, otherwise it would have to follow GNU conventions.
AUTOMAKE_OPTIONS = foreign


DIST_DIRS = CCfits cookbook

EXTRA_DIST = MANIFEST $(DIST_DIRS)

